cs225/lab_avl/compiling_error.txt
/Users/Jacob/ECE/cs225/lab_avl/avltree.cpp:8:3: warning: variable templates are a C++14 extension [-Wc++14-extensions]
V AVLTree<K, V>::find(const K& key) const
  ^
/Users/Jacob/ECE/cs225/lab_avl/avltree.cpp:8:10: error: expected ';' at end of declaration
V AVLTree<K, V>::find(const K& key) const
         ^
         ;
/Users/Jacob/ECE/cs225/lab_avl/avltree.cpp:8:10: error: expected unqualified-id
/Users/Jacob/ECE/cs225/lab_avl/avltree.cpp:14:16: error: qualified name refers into a specialization of variable template 'AVLTree'
V AVLTree<K, V>::find(Node* subtree, const K& key) const
  ~~~~~~~~~~~~~^
/Users/Jacob/ECE/cs225/lab_avl/avltree.cpp:8:3: note: variable template 'AVLTree' declared here
V AVLTree<K, V>::find(const K& key) const
  ^
/Users/Jacob/ECE/cs225/lab_avl/avltree.cpp:14:23: error: unknown type name 'Node'
V AVLTree<K, V>::find(Node* subtree, const K& key) const
                      ^
1 warning and 4 errors generated.
